Fix .is-blurred modal dailyReward + style

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -2333,32 +2333,7 @@ button, input[type="submit"], input[type="reset"] {
 	content: "\f753";
 } */
 
-.fadeInDailyReward {
-	animation: fadeInDailyReward 0.5s ease forwards 1;
-}
-@keyframes fadeInDailyReward {
-	from {
-		opacity: 0;
-		left: -50%
-	}
-	to {
-		opacity: 1;
-		left: 50%;
-	}
-}
-.fadeOutDailyRewards {
-	animation: fadeOutDailyRewards 0.5s ease forwards 1 !important;
-}
-@keyframes fadeOutDailyRewards {
-	from {
-		opacity: 0.9;
-		left: 50%;
-	}
-	to {
-		opacity: 0;
-		left: 150%;
-	}
-}
+
 
 .refreshCreditAnim {
 	animation: flashCreditRefresh 0.42s ease  forwards !important;
@@ -2687,8 +2662,114 @@ h2 {
 }
 
 .is-blurred {
+	/* filter(saturate) */
 	filter: blur(3px);
     -webkit-filter: blur(3px);
+}
+
+
+
+#confirm {
+	/* position: absolute;
+	left: 25%; */
+	margin: auto 20px;
+
+	border: 1px solid rgb(17 19 31);
+	padding: 8px 26px;
+	border-radius: 4px;
+
+	transition: all 0.4s;
+}
+#confirm:hover {
+	background-color: rgba(17, 19, 31, 0.5);
+	color: rgba(240, 248, 255, 0.8);
+}
+#cancel {
+	/* position: absolute;
+	right: 25%; */
+	margin: auto 20px;
+
+	border: 1px solid rgb(17 19 31);
+	padding: 8px 26px;
+	border-radius: 4px;
+
+	transition: all 0.4s;
+}
+#cancel:hover {
+	background-color: rgba(17, 19, 31, 0.5);
+	color: rgba(240, 248, 255, 0.8);
+}
+
+#amountDailyReward {
+	position:relative; 
+	top:50%; 
+	transform:translateY(-50%); 
+	padding:17px 20px; 
+	width:40%; 
+	text-align:center; 
+	margin:auto; 
+	border-radius:7px; 
+	border:3px solid rgb(42 37 37 / 80%); 
+	background-color:rgb(215 47 35); 
+	box-shadow:rgb(0 0 0 / 90%);
+
+	cursor: pointer;
+}
+
+
+#modalLeave {
+	display:none; 
+	opacity:1; 
+
+	position:absolute; 
+
+	width:54%; 
+	height:15%; 
+
+	/* left:100%;  */
+	top:50%; 
+	left:-50%; 
+	transform:translate(-50%, -50%); 
+
+
+	border-radius:10px; 
+	box-shadow: 0px 9px 0px rgba(0, 0, 0, 0.9); 
+	padding:2% 4% 4% 4%; 
+	font-weight:400; 
+	z-index:2; 
+	background-color:rgba(239, 59, 46, 1); 
+	text-align:center; 
+	font-size:1.9em; 
+	font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
+	color:rgb(17 19 31); 
+	border:3px solid black;
+}
+
+.fadeInDailyReward {
+	animation: fadeInDailyReward 0.5s ease forwards 1;
+}
+@keyframes fadeInDailyReward {
+	from {
+		opacity: 0;
+		left: -50%
+	}
+	to {
+		opacity: 1;
+		left: 50%;
+	}
+}
+.fadeOutDailyRewards {
+	animation: fadeOutDailyRewards 0.5s ease forwards 1 !important;
+}
+@keyframes fadeOutDailyRewards {
+	from {
+		opacity: 1;
+		left: 50%;
+	}
+	to {
+		opacity: 0;
+		left: 150%;
+	}
 }
 
 
